# BUAA-Compiler

./: CMakeLists.txt  README.md  main.cpp  testfile.txt
codeGeneration/: cal.cpp  cal.h
codeGeneration/label/: ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  Stmt.cpp  Stmt.h
codeGeneration/llvm/: Llvm.cpp  Llvm.h  LlvmIRConstructor.cpp  LlvmIRConstructor.h  LlvmIRGenerator.cpp  LlvmIRGenerator.h  constVarInfo.cpp  constVarInfo.h  libsysy.c
error/: Error.cpp  Error.h
lexer/: Lexer.cpp  Lexer.h
parser/: Parser.cpp  Parser.h
parser/declaration/: Decl.cpp  Decl.h
parser/declaration/const/: ConstDecl.cpp  ConstDecl.h
parser/declaration/variable/: InitVal.cpp  InitVal.h  VarDecl.cpp  VarDecl.h  VarDef.cpp  VarDef.h
parser/def/: ConstDef.cpp  ConstDef.h  ConstInitVal.cpp  ConstInitVal.h
parser/expression/multiexp/: AddExp.cpp  AddExp.h  EqExp.cpp  LAndExp.cpp  LAndExp.h  LOrExp.cpp  LOrExp.h  MulExp.cpp  MulExp.h  PrimaryExp.cpp  PrimaryExp.h  RelExp.cpp
parser/expression/unaryexp/: Character.cpp  Character.h  Cond.h  ConstExp.cpp  ConstExp.h  Exp.cpp  Exp.h  Lval.cpp  Lval.h  Number.cpp  Number.h  UnaryExp.cpp  UnaryExp.h
parser/function/: FuncDef.cpp  FuncDef.h  FuncFParam.cpp  FuncFParam.h  FuncFParams.cpp  FuncFParams.h  FuncRParams.cpp  FuncRParams.h  MainFuncDef.cpp  MainFuncDef.h
parser/statement/: Block.cpp  Block.h  BlockItem.cpp  BlockItem.h  ForStmt.cpp  ForStmt.h  Stmt.cpp  Stmt.h
semantic/: Semantic.cpp  Semantic.h
symbolTable/: SymbolItem.cpp  SymbolItem.h  SymbolTable.cpp  SymbolTable.h
symbolTable/blockTree/: BlockTree.cpp  BlockTree.h  BlockTreeNode.cpp  BlockTreeNode.h
token/: Token.cpp  Token.h
util/: Constants.cpp  Constants.h  Util.cpp  Util.h  Value.cpp  Value.h
